# Food-Finder

./: .gitignore  .travis.yml  README.md  docker-compose.yml  skaffold.yaml
backend/: Dockerfile  Dockerfile.dev  manage.py  pyproject.toml
backend/foodfinder/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/geofinder/: admin.py  apps.py  models.py  scrape.py  serializers.py  tasks.py  urls.py  util.py  views.py
backend/geofinder/migrations/: 0001_initial.py  0002_menuitem_image.py  0003_business_city_business_state_business_url.py  0004_alter_business_location.py  0005_alter_business_method_for_query.py  0006_alter_business_url.py  0007_alter_business_city_alter_business_location_and_more.py  0008_business_yelp_id.py
backend/geofinder/util/: __init__.py  business_model.py  menuitem_models.py
backend/helloworld/: urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_address.py
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Address.jsx  App.css  App.jsx  DetailModal.jsx  Filter.jsx  FilterBackdrop.jsx  FilterModal.jsx  FoodCard.jsx  FoodCard2.jsx  FoodCards.jsx  FoodDetail.jsx  Header.css  Header.jsx  HomePage.jsx  IsSignedIn.jsx  Login.jsx  Navigation.jsx  Profile.jsx  ReactShowcase.jsx  Search.jsx  (+8 more)
k8s/: client-cluster-ip-service.yaml  client-deployment.yaml  ingress-service.yaml  server-deployment.yaml  worker-deployment.yaml
nginx/: default.conf
(+7 files in other folders)
