[tool.poetry]
name = "food-finder-backend"
version = "0.1.0"
description = ""
authors = ["Carson Weeks <mail@carsonweeks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
django-cors-headers = "^3.11.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
pylint-django = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
exclude = '''
/(
  | migrations
)/

'''

[tool.pylint.master]
load-plugins = "pylint_django"
django-settings-module = "streaming.settings"

[tool.pylint.format]
max-line-length = 89 

[tool.pylint.messages_control]
disable = """
missing-module-docstring,
missing-class-docstring,
missing-function-docstring
"""